--- a/public/templates/professional-v1/css/styles.css
+++ b/public/templates/professional-v1/css/styles.css
@@ -10063,6 +10063,8 @@ p.lead {
   }
   #sideNav .navbar-brand .img-profile {
     max-width: 10rem;
+      min-width:10rem;
+      min-height:10rem;
     max-height: 10rem;
     border: 0.5rem solid rgba(255, 255, 255, 0.2);
   }
